# LunaAI

./: .gitignore  Cargo.toml  README.md  advanced_async.rs  async_examples.rs  build.txt
docs/: CNAME  configuration.md  index.html  sample_config.toml  sample_mcp_config.json  sample_system_prompt.md  sample_user_prompt.md  style.css
src/: lib.rs  main.rs  prompts.rs
src/agentic/: loop_engine.rs  mod.rs  protocol.rs  tool_logger.rs
src/config/: mod.rs
src/llm/: allms_client.rs  anthropic.rs  context_manager.rs  file_utils.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  rate_limiter.rs  token_counter.rs
src/mcp/: mod.rs  protocol.rs  registry.rs  stdio_client.rs  transport.rs
src/storage/: conversation_storage.rs  mod.rs  sqlite_storage.rs  sqlite_storage_simple.rs  storage_wrapper.rs  v2.rs
src/ui/: app.rs  context.rs  icons.rs  mod.rs
src/ui/dialogs/: mod.rs
src/ui/pages/: chat.rs  history.rs  mod.rs
src/ui/pages/settings/: app_preferences.rs  llm_profiles.rs  mcp_config.rs  mod.rs  page.rs  simple_settings.rs
src/ui/pages/settings/components/: mod.rs  profile_card.rs  server_card.rs  settings_section.rs
src/ui/widgets/: mod.rs  tool_call.rs
